fix:js for main__gallery_text

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <img src="./assets/img/main__gallery_images-image-1.jpg" class="main__gallery_images_img" alt=""/>
             <img src="./assets/img/main__gallery_images-image-2.jpeg" class="main__gallery_images_img" alt=""/>
         </div>
-        <p class="main__gallery_text"></p>
+        <p id="price" class="main__gallery_text"></p>
         <button onclick="calculateTotalPrice()" class="main__gallery_btn">Узнать стоимость</button>
     </main>
 </body>
